--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@example/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run-many --target=serve --all --maxParallel=100"
+  },
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.14.5",
