--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
@@ -68,7 +72,7 @@
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "styled-components": "5.3.6",
+    "styled-components": "^6.1.0",
     "tslib": "^2.3.0"
   }
 }
