--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
+    "immer": "^10.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
@@ -73,6 +74,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "styled-components": "^6.1.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zustand": "^4.4.4"
   }
 }
