--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/lodash.debounce": "^4.0.8",
     "@types/node": "18.14.2",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
@@ -67,6 +68,7 @@
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "immer": "^10.0.3",
+    "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
